# GraphQL_Practice

./: pyproject.toml
warship/: manage.py
warship/warship/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
